# schematic_utils

./: .gitignore  Cargo.toml  Dockerfile  build-ffi.sh  docker-build.sh  julia_set_3d.litematic  mandelbulb.schem  redpiler_graph.bc  simple_cube.litematic  test_schematic.schem
.cargo/: config.toml
benches/: schematic_bench.rs
src/: block_entity.rs  block_position.rs  block_state.rs  bounding_box.rs  chunk.rs  chunk_section.rs  entity.rs  ffi.rs  lib.rs  mchprs_world.rs  metadata.rs  palette.rs  print_utils.rs  region.rs  schematic.rs  universal_schematic.rs  utils.rs  wasm.rs
src/block_entity/: generic.rs  mod.rs
src/formats/: litematic.rs  mod.rs  schematic.rs
src/item/: mod.rs  stack.rs
src/utils/: mod.rs  nbt.rs
tests/: integration_tests.rs
tests/output/: 1x1.litematic  1x1.schem  3x2x3.litematic  3x2x3.schem  3x3.litematic  3x3.schem  4x4x4+1.litematic  4x4x4+1.schem  all_items.litematic  all_items.schem  brewer.litematic  brewer.schem  quarry.litematic  quarry.schem  sample.litematic  sample_converted.schem  test_coordinate_thingy.litematic  test_coordinate_thingy.schem  trencher.litematic  trencher.schem  wool_palette.litematic  wool_palette.schem
tests/samples/: 1x1.litematic  3x2x3.litematic  3x3.litematic  4x2x4.litematic  4x4x4+1.litematic  all_items.litematic  and.schem  brewer.litematic  cutecounter.schem  door_plot.litematic  file.litematic.l  gol.litematic  linear_plotter.litematic  new_chest_test.schem  sample.litematic  sample.schem  spinny.litematic  ss-sorter.litematic  storage_thingy.litematic  trencher.litematic  wool_palette.litematic
wasm-test/: bun.lockb  index.html  index.js  minecraft_schematic_utils.js  minecraft_schematic_utils_bg.wasm  package.json
