[package]
name = "minecraft_schematic_utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
quartz_nbt = "0.2.9"
serde-wasm-bindgen = "0.4"
flate2 = "1.0.32"
log = "0.4.22"
js-sys = "0.3.70"
console = "0.15.8"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5.1"
num-complex = "0.4"

[[bench]]
name = "schematic_bench"
harness = false

[profile.bench]
debug = true

[profile.release]
lto = true
opt-level = 3
