[package]
name = "minecraft_schematic_utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
quartz_nbt = "0.2.9"
serde-wasm-bindgen = "0.4"
flate2 = "1.0.32"
log = "0.4.22"
js-sys = "0.3.70"
console = "0.15.8"
mchprs_redpiler = { path = "/home/harrison/RustroverProjects/MCHPRS/crates/redpiler" }
mchprs_redstone = { path = "/home/harrison/RustroverProjects/MCHPRS/crates/redstone" }
mchprs_world = { path = "/home/harrison/RustroverProjects/MCHPRS/crates/world", default-features = false }
mchprs_blocks = { path = "/home/harrison/RustroverProjects/MCHPRS/crates/blocks" }
mc_schems = { git = "https://github.com/StackDoubleFlow/mc_schems.git" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hematite-nbt = "*"
tracing = "0.1.40"



[patch.crates-io]
hematite-nbt = { git = "https://github.com/StackDoubleFlow/hematite_nbt" }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5.1"
num-complex = "0.4"

[[bench]]
name = "schematic_bench"
harness = false

[profile.bench]
debug = true

[profile.release]
lto = true
opt-level = 3
